tests/snapshots/e2e__transitive_flag_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== a.proto ===
syntax = "proto3";
import "shared.proto";
message A {}

=== shared.proto ===
syntax = "proto3";
message Shared {}
