tests/snapshots/e2e__transitive_mixed_rules_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== consumer.proto ===
syntax = "proto3";
message Consumer {}

=== shared.proto ===
syntax = "proto3";
message Shared {}
