tests/snapshots/e2e__transitive_only_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== proto/a.proto ===
syntax = "proto3";
message A {}

=== proto/b.proto ===
syntax = "proto3";
message B {}
