tests/snapshots/e2e__two_repos_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== proto/b.proto ===
syntax = "proto3";
message B {}

=== proto/v1.proto ===
syntax = "proto3";
message V1 {}
